# Hello_OpenGL

./: CMakeLists.txt  main.cpp
dep/GLEW/include/GL/: glew.h
glsl/: baseshape.frag  baseshape.vert  carbon_ball.frag  scene_triangle.frag  scene_triangle.vert
include/: gui.h
lib/assimp/include/: config.h  material.h  postprocess.h
lib/imgui/: imgui.cpp  imgui.h  imgui_impl_opengl3.cpp  main.cpp
lib/stb_image/: stb_image.cpp  stb_image.h
src/base/: Camera.h  Color.h  ElementArrayBuffer.h  IndexBuffer.h  Renderer.h  ShaderProxy.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  common.h
src/scene/: BaseScene.h  GeometryScene.h  SceneTriangle.h
src/shapes/: BaseShape.h  ShapeCarbonBall.h  ShapeCircle.h  ShapeCylinder.h  ShapePoints.h  ShapeRing.h  ShapeTorus.h  ShapeTriangle.h
